// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-AxjAm jQEjKi"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-AxjAm iRwjdG"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-AxjAm jQEjKi"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-AxjAm edFoMf"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-AxjAm edFoMf"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-AxjAm fvZIaJ"
  />
</div>
`;
